--- a/README.org
+++ b/README.org
@@ -1,13 +1,11 @@
-[[http://unmaintained.tech/][http://unmaintained.tech/badge.svg]]
+Java version of this  [[https://github.com/redblobgames/mapgen2][Polygon Map Generator]]. 
 
-JavaScript version of my [[https://github.com/amitp/mapgen2/][Polygon Map Generator]]. 
-
-- Most of the algorithms are reimplemented rather than ported, so there are some minor differences, but it mostly follows what's described on [[http://www-cs-students.stanford.edu/~amitp/game-programming/polygon-map-generation/][this page]].
+- The algorithems are mostly described here [[http://www-cs-students.stanford.edu/~amitp/game-programming/polygon-map-generation/][this page]].
 - The data structures are rather different. The mesh connectivity is separate from the generated map (elevation, rivers, biomes, etc.). The original project uses an “array of struct” approach whereas this one uses a “struct of arrays” approach (see [[https://en.wikipedia.org/wiki/AOS_and_SOA][explanation]]).
 - The naming convention for the data is =x_property_y= where =x= and =y= are =r=, =s=, or =t= indicating the type of the input (=x=) and output (=y=). For example, =t_downslope_s= would be an array indexed by a =t= (triangle) id, and returning an =s= (side) id.
 - The maps are created with 0 ≤ x ≤ 1000, 0 ≤ y ≤ 1000.
 
-This repository contains the map generation algorithms but not the code for UI or rendering.
+Below stuff is outdated:
 
 ** Output
 
